# authora-theorist-tutors

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
challenge/: theorist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/authora_theorist_tutors/: benchmarking.py
src/autora/theorist/autora_theorist_tutors/: __init__.py  benchmarking.py  regressor.py
tests/: test_authora_theorist_tutors.py  test_autora_theorist_tutors.py
