[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora_theorist_tutors"
description = "Contribution to the ARA Workshop"
authors = [{ name = "Deniz M Gun", email = "dguen@uos.de" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
    "sympy",
    "autora[theorist-bms]",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "github.com/denizmgun/autora-theorist-tutors"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
